@@ -1,3 +1,9 @@
+2008-10-23  Aaron S. Hawley  <ashawley-@-sourceforge.net>
+
+	* php-mode.el (php-imenu-generic-expression): Reverse order of
+	expression, since Imenu displays it in reverse.
+	(php-completion-table): Move next to php-complete-function.
+
 2008-10-23  David House <dmhouse-@-gmail.com>
 
 	* php-mode.el (php-font-lock-keywords-1)
